--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         </div>
       </div>
     </div>
+    <audio src="audio/beep-04.mp3"></audio>
     <script src="scripts.js">
     </script>
   </body>
